@@ -21,8 +21,9 @@
  * Foundation, Inc., 59 Temple Place, Suite 330,
  * Boston, MA 02111-1307, USA.
  * */
-
-#include <config.h>
+#ifdef HAVE_CONFIG_H
+    #include <config.h>
+#endif
 #include <glib/gi18n-lib.h>
 #include "lunar-main.h"
 
